noa_googletest(NAMESPACE sourcemeta PROJECT core NAME json
  FOLDER "Core/JSON"
  SOURCES
    json_array_test.cc
    json_boolean_test.cc
    json_error_test.cc
    json_hash_test.cc
    json_integer_test.cc
    json_null_test.cc
    json_number_test.cc
    json_object_test.cc
    json_parse_callback_test.cc
    json_parse_error_test.cc
    json_parse_test.cc
    json_prettify_test.cc
    json_real_test.cc
    json_string_test.cc
    json_stringify_test.cc
    json_value_test.cc
    json_type_test.cc)

target_link_libraries(sourcemeta_core_json_unit
  PRIVATE sourcemeta::core::json)
target_compile_definitions(sourcemeta_core_json_unit
  PRIVATE TEST_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}")

# JSON Test Suite
# See https://github.com/nst/JSONTestSuite
noa_googletest(NAMESPACE sourcemeta PROJECT core NAME jsontestsuite
  FOLDER "Core/JSON"
  SOURCES jsontestsuite.cc)
target_compile_definitions(sourcemeta_core_jsontestsuite_unit
  PRIVATE JSONTESTSUITE_PATH="${PROJECT_SOURCE_DIR}/vendor/jsontestsuite")
target_link_libraries(sourcemeta_core_jsontestsuite_unit PRIVATE sourcemeta::core::json)
